# peridot-sprite-atlas-visualizer-wayland

./: .gitignore  Cargo.toml  build.rs  flatpak.manifest.yml  peridot-sprite-atlas-visualizer-wayland.exe.manifest  vcpkg.json  win32_exe.rc
.zed/: settings.json
devtools/perflog-printer/: Cargo.toml
devtools/perflog-printer/src/: main.rs
platform/linux/epoll/: Cargo.toml
platform/linux/epoll/src/: lib.rs
platform/linux/eventfd/: Cargo.toml
platform/linux/eventfd/src/: lib.rs
platform/linux/input-event-codes/: Cargo.toml
platform/linux/input-event-codes/src/: lib.rs
platform/win32/registry/: Cargo.toml
platform/win32/registry/src/: lib.rs
resources/: Makefile  aa_circle.frag.glsl  atlas_bg.frag.glsl  atlas_bg.vert.glsl  blit_alphamask.frag.glsl  blit_axis_convolved.frag.glsl  composite.frag.glsl  composite.resources.glsl  composite.vert.glsl  corner_cutout.frag.glsl  corner_cutout_placement.vert.glsl  fillcolor_r.frag.glsl  filltri.vert.glsl  filltri_uvmod.vert.glsl  grid.frag.glsl  normalized_01_2d.vert.glsl  normalized_01_2d_with_uv.vert.glsl  rect_border.frag.glsl  rounded_rect.frag.glsl  rounded_rect_border.frag.glsl  sprite_instance.frag.glsl  sprite_instance.vert.glsl  stencil_loop_blinn_curve.frag.glsl
resources/dual_kawase_filter/: downsample.frag.glsl  downsample.vert.glsl  upsample.frag.glsl  upsample.vert.glsl
resources/icons/: README.md
shared/ffi-common/: Cargo.toml
shared/ffi-common/src/: lib.rs
shared/perflog-proto/: Cargo.toml
shared/perflog-proto/src/: lib.rs
src/: app_state.rs  atlas.rs  base_system.rs  bg_worker.rs  composite.rs  coordinate.rs  fontconfig.rs  freetype.rs  harfbuzz.rs  helper_types.rs  hittest.rs  input.rs  main.rs  mathext.rs  peridot.rs  quadtree.rs  subsystem.rs  svg.rs  text.rs  trigger_cell.rs  wl.rs
src/base_system/: cache.rs  corner_cutout.rs  prof.rs  scratch_buffer.rs  svg.rs
src/feature/: app_header.rs  app_menu.rs  auto_arrange_settings.rs  editing_atlas_renderer.rs  mod.rs  sprite_list_pane.rs
src/harfbuzz/: ffi.rs
src/platform/: mod.rs
src/platform/linux/: epoll.rs  input_event_codes.rs  mod.rs  time.rs
src/platform/win32/: event.rs  mod.rs
src/shell/: macos.rs  mod.rs  wayland.rs  win32.rs
src/source_reader/: png.rs
src/uikit/: common_controls.rs  message_dialog.rs  mod.rs  popup.rs
src/wl/: cursor_shape.rs  ffi.rs  xdg_shell.rs
