[workspace]
members = [
    "thirdparty/dbus",
    "thirdparty/fontconfig",
    "thirdparty/freetype",
    "thirdparty/harfbuzz",
    "thirdparty/wayland",
]

[package]
name = "peridot-sprite-atlas-visualizer-wayland"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
platform-linux-wayland = ["bedrock/VK_KHR_wayland_surface", "dep:wayland"]
platform-windows = ["bedrock/VK_KHR_win32_surface"]

[workspace.dependencies]
tracing = "0.1.41"
bitflags = "2.9.0"
quick-xml = "0.37.5"
thiserror = "2.0.12"
freetype2 = { git = "https://github.com/Pctg-x8/ft2-rs" }

[dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot", features = [
    "Implements",
    "Presentation",
    "Allow1_4APIs",
    "VK_EXT_debug_utils",
] }
freetype2.workspace = true
bitflags.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
thiserror.workspace = true
quick-xml.workspace = true
lyon_geom = "1.0.6"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
libc = "0.2.172"
smol = "2"
image = "0.25.6"
crossbeam = "0.8.4"
walkdir = "2.5.0"
parking_lot = "0.12.4"
freetype = { path = "./thirdparty/freetype" }
harfbuzz = { path = "./thirdparty/harfbuzz" }

[target.'cfg(unix)'.dependencies]
wayland = { path = "./thirdparty/wayland", optional = true }
dbus = { path = "./thirdparty/dbus" }
fontconfig = { path = "./thirdparty/fontconfig" }

[target.'cfg(windows)'.dependencies]
windows-future = "0.2.1"
windows-core = "0.61.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Storage_Pickers",
    "Storage_Streams",
]
