[workspace]
members = [
    "devtools/perflog-printer",
    "platform/linux/epoll",
    "platform/linux/eventfd",
    "platform/linux/input-event-codes",
    "platform/win32/registry",
    "shared/ffi-common",
    "shared/perflog-proto",
    "thirdparty/dbus",
    "thirdparty/fontconfig",
    "thirdparty/freetype",
    "thirdparty/harfbuzz",
    "thirdparty/microsoft-sdk-locator",
    "thirdparty/objc-rt",
    "thirdparty/proto/dbus",
    "thirdparty/proto/desktop-portal",
    "thirdparty/wayland",
]

[package]
name = "peridot-sprite-atlas-visualizer-wayland"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
platform-linux-wayland = [
    "bedrock/VK_KHR_wayland_surface",
    "dep:wayland",
    "bedrock/Allow1_4APIs",
]
platform-windows = ["bedrock/VK_KHR_win32_surface", "bedrock/Allow1_4APIs"]
platform-macos = [
    "bedrock/DynamicLoaded",
    "bedrock/VK_EXT_metal_surface",
    "bedrock/VK_KHR_portability_enumeration",
    "bedrock/VK_KHR_synchronization2",
    "bedrock/VK_KHR_get_physical_device_properties2",
    "bedrock/VK_KHR_create_renderpass2",
]
profiling = []

[workspace.dependencies]
tracing = "0.1.41"
bitflags = "2.9.0"
quick-xml = "0.37.5"
thiserror = "2.0.12"
freetype2 = { git = "https://github.com/Pctg-x8/ft2-rs" }
windows = "0.61"
libc = "0.2"

[dependencies]
# Note: MoltenVKが正しくVulkan 1.3以上に対応してないので（promoteされたシンボルの一部がないらしい）Allow1_4APIsはプラットフォームfeature側で有効にする
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot", features = [
    "Implements",
    "Presentation",
    "VK_EXT_debug_utils",
] }
bitflags.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
thiserror.workspace = true
quick-xml.workspace = true
lyon_geom = "1.0.6"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
libc.workspace = true
smol = "2"
image = "0.25.6"
crossbeam = "0.8.4"
walkdir = "2.5.0"
parking_lot = "0.12.4"
freetype = { path = "./thirdparty/freetype" }
harfbuzz = { path = "./thirdparty/harfbuzz" }
shared-perflog-proto.path = "./shared/perflog-proto"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wayland = { path = "./thirdparty/wayland", optional = true }
dbus = { path = "./thirdparty/dbus" }
fontconfig = { path = "./thirdparty/fontconfig" }
dbus-proto.path = "./thirdparty/proto/dbus"
desktop-portal-proto.path = "./thirdparty/proto/desktop-portal"

[target.'cfg(target_os = "linux")'.dependencies]
linux-epoll = { path = "./platform/linux/epoll" }
linux-eventfd = { path = "./platform/linux/eventfd" }
linux-input-event-codes = { path = "./platform/linux/input-event-codes" }

[target.'cfg(windows)'.build-dependencies]
microsoft-sdk-locator.path = "./thirdparty/microsoft-sdk-locator"

[target.'cfg(windows)'.dependencies]
windows-future = "*"
windows-core = "*"
windows-collections = "*"

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_DirectWrite",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Storage_Pickers",
    "Storage_Streams",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc-rt = { path = "./thirdparty/objc-rt" }
